--- a/quform-to-google-sheet/composer.json
+++ b/quform-to-google-sheet/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "wpstrap/wordpress-plugin-boilerplate",
-    "description": "Wordpress Plugin Boilerplate",
-    "version": "0.3.1",
+    "name": "mam/quform-to-google-sheet",
+    "description": "Quform To Google Sheet",
+    "version": "0.0.1",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "type": "wordpress-plugin",
     "license": "MIT",
-    "homepage": "https://wp-strap.com",
+    "homepage": "https://github.com/moveaheadmedia/mam-quform-google-sheet",
     "autoload": {
         "psr-4": {
             "QuformToGoogleSheet\\": "src/"
@@ -14,21 +14,21 @@
     },
     "scripts": {},
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.4",
         "micropackage/requirements": "^1.0"
     },
     "require-dev": {},
     "keywords": [
         "wordpress",
         "plugin",
-        "boilerplate",
-        "framework"
+        "quform",
+        "google sheets"
     ],
     "authors": [
         {
-            "name": "WP-Strap",
-            "email": "hello@wp-strap.com",
-            "homepage": "https://wp-strap.com"
+            "name": "Ali Sal",
+            "email": "ali@salti-media.com",
+            "homepage": "https://github.com/moveaheadmedia/mam-quform-google-sheet"
         }
     ]
 }
